--- a/css/canvas.css
+++ b/css/canvas.css
@@ -15,11 +15,11 @@
     background-color: white;
     -webkit-box-shadow:0px 0px 14px #BBB;
 }
-.showAnim{
+.blue-block {
+    position: absolute;
     text-align: center;line-height: 40px;cursor: pointer;
     border: 1px solid black;background-color: rgba(100,149,237,0.6);color: white;
 }
-
 .element-container{
 
 }
