add preview play and remove help intro

--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -140,3 +140,4 @@
 #tool-addVideo {background-image: url(../img/video.png);}
 #tool-addCode {background-image: url(../img/code.png);}
 #tool-help {background-image: url(../img/help.png);}
+#tool-play {background-image: url(../img/play.png);}
