--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,7 @@ input{
 .box {border: 1px solid;border-radius: 5px;background: white;height: 25px;}
 .w-auto {width: auto;}
 .on {box-shadow: inset 0 0 10px 2px cornflowerblue!important;}
+.op-full {opacity: 1;}
 /*.cursor-mb{cursor: url(../img/paintingboard/maobi.png), auto;}
 .cursor-init{cursor: initial;}
 .cursor-er{cursor: url(../img/paintingboard/eraser.png), auto;}*/
