--- a/css/view.css
+++ b/css/view.css
@@ -10,7 +10,7 @@
     /*border-top-right-radius: 20px;*/
     border-top: 1px solid black;
     padding-top: 10px;
-    background: rgba(0,0,0,0.1);
+    /*background: url(../img/bg-pattern.png);*/
 }
 .frame{
     position: relative;
