--- a/css/view.css
+++ b/css/view.css
@@ -8,7 +8,7 @@
     /*background-image: url(../img/wood.jpg);*/
     /*border-top-left-radius: 20px;*/
     /*border-top-right-radius: 20px;*/
-    border-top: 1px solid black;
+    /*border-top: 1px solid black;*/
     padding-top: 10px;
     /*background: url(../img/bg-pattern.png);*/
 }
@@ -34,7 +34,7 @@
 #frame-list{
     position: relative;
     width: auto;
-    margin: auto;
+    /*margin: auto;*/
     margin-bottom: 25px;
     display: -webkit-box;
 
