--- a/css/canvas.css
+++ b/css/canvas.css
@@ -16,10 +16,10 @@
     -webkit-box-shadow:0px 0px 14px #BBB;
 }
 .blue-block {
-    position: absolute;
     text-align: center;line-height: 40px;cursor: pointer;
     border: 1px solid black;background-color: rgba(100,149,237,0.6);color: white;
 }
+.showAnim-label {line-height: 30px;font-size: 20px;text-shadow:0 0 2px white;text-align: center;font-family: arial;}
 .element-container{
 
 }
