--- a/css/canvas.css
+++ b/css/canvas.css
@@ -19,6 +19,7 @@
     position: absolute;
     text-align: center;line-height: 40px;cursor: pointer;
     border: 1px solid black;background-color: rgba(100,149,237,0.6);color: white;
+    text-shadow: 0 0 2px #000;font-size: 18px;letter-spacing: 1px;
 }
 .element-container{
 
