--- a/css/canvas.css
+++ b/css/canvas.css
@@ -18,7 +18,7 @@
 .blue-block {
     text-align: center;line-height: 40px;cursor: pointer;
     border: 1px solid black;background-color: rgba(100,149,237,0.6);color: white;
-    text-shadow: 0 0 2px #000;font-size: 18px;letter-spacing: 1px;
+    text-shadow: 0 0 2px #000;letter-spacing: 1px;
 }
 .showAnim-label {line-height: 30px;font-size: 20px;text-shadow:0 0 2px white;text-align: center;font-family: arial;}
 .element-container{
