--- a/css/introjs.css
+++ b/css/introjs.css
@@ -3,11 +3,17 @@
   z-index: 999999;
   background-color: #000;
   opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=50);
   -webkit-transition: all 0.3s ease-out;
      -moz-transition: all 0.3s ease-out;
       -ms-transition: all 0.3s ease-out;
        -o-transition: all 0.3s ease-out;
           transition: all 0.3s ease-out;
+}
+
+.introjs-fixParent {
+  z-index: auto !important;
 }
 
 .introjs-showElement {
@@ -21,7 +27,9 @@
 .introjs-helperLayer {
   position: absolute;
   z-index: 9999998;
+  background-color: #FFF;
   background-color: rgba(255,255,255,.9);
+  border: 1px solid #777;
   border: 1px solid rgba(0,0,0,.5);
   border-radius: 4px;
   box-shadow: 0 2px 15px rgba(0,0,0,.4);
@@ -187,4 +195,14 @@
   -webkit-border-radius: 0 0.2em 0.2em 0;
   -moz-border-radius: 0 0.2em 0.2em 0;
   border-radius: 0 0.2em 0.2em 0;
+}
+
+.introjs-disabled, .introjs-disabled:hover, .introjs-disabled:focus {
+  color: #9a9a9a;
+  border-color: #d4d4d4;
+  box-shadow: none;
+  cursor: default;
+  background-color: #f4f4f4;
+  background-image: none;
+  text-decoration: none;
 }
