--- a/css/view.css
+++ b/css/view.css
@@ -4,6 +4,7 @@
     /*height: 20px;*/
     /*left: 0;*/
     bottom: 0px;
+    left: 0;
     z-index: 100;
     /*background-image: url(../img/wood.jpg);*/
     /*border-top-left-radius: 20px;*/
