--- a/css/shapebar.css
+++ b/css/shapebar.css
@@ -2,6 +2,7 @@
 	position: relative;
 	top: 0px;right: 0px;height: 100%;z-index: 0;border-right: 0;padding-left: 20px;
 	border: 1px solid black;background-color: rgba(0,0,0,0.1);z-index: 700;border-top: 0;
+	padding-top: 5px;
 	/*border-top-left-radius: 10px;*/
 	/*border-bottom-right-radius: 10px;*/
 }
