--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,11 @@ body{
 input{
     background-color:transparent;
 }
-#appContainer {height: 100%;width: 100%;}
+#appContainer {height: 100%;width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
 .header{
 
     position: absolute;
