--- a/css/canvas.css
+++ b/css/canvas.css
@@ -1,12 +1,12 @@
 #canvas{
     position: relative;
-    margin-top: 15px;
+    padding-top: 15px;
 }
 #canvas .container{
 
     position: relative;
     margin: auto;
-    margin-top: 10px;
+    /*margin-top: 10px;*/
     border: 1px solid black;
 
 }
