--- a/css/shapebar.css
+++ b/css/shapebar.css
@@ -1,13 +1,16 @@
 #shapebar {
 	position: relative;
-	top: 0px;right: 0px;height: 100%;z-index: 0;border-right: 0;padding-left: 20px;
-	border: 1px solid black;background-color: rgba(0,0,0,0.1);z-index: 700;border-top: 0;
-	padding-top: 5px;
+	top: 0px;right: 0px;height: 100%;z-index: 0;
+	border-left: 1px solid black;background-color: rgba(0,0,0,0.1);z-index: 700;
+	padding: 0 15px;
+	padding-top: 15px;
 	/*border-top-left-radius: 10px;*/
 	/*border-bottom-right-radius: 10px;*/
 }
 .shape-icon {
-	background-repeat: no-repeat;background-size: 42px 42px;margin:15px;height: 50px;width: 50px;margin-top: 20px;margin-right: 30px;
+	background-repeat: no-repeat;background-size: 42px 42px;
+	margin-top:15px;
+	height: 50px;width: 50px;
 	border: 1px solid;background-position: center;background-color: white;
 	border-radius: 10px;
 }
