--- a/css/stylebar.css
+++ b/css/stylebar.css
@@ -31,12 +31,13 @@
     -moz-animation-timing-function: linear; 
 }*/
 #execCommand-detail{
-    display: none;
+    /*display: none;*/
     position: absolute;
     padding: 5px 0px;
     z-index: 999;
     width:  auto;
-    padding: 10px;
+    padding: 5px 5px;
+    -webkit-transition : left 0.5s,top 0.5s;
 }
 
 #stylebar .show_execCommandDetail{
@@ -66,15 +67,16 @@
     background-size: 20px;
     background-color: white;
 }
-.execCommand-item{
-
-    float: left;
+.execCommand-item.active{
+    box-shadow: inset 0 0 10px 3px #6495ED,0 0 0 1px black;
+    border-radius: 5px;
+    /*float: left;*/
     /*margin-left: 5px;*/
 
 }
 .execC-but{
-    width: 40px;
-    height: 40px;
+    width: 25px;
+    height: 25px;
     /*border-radius: 8px;*/
     /*border: none;*/
     outline: none;
@@ -82,7 +84,8 @@
     background-repeat: no-repeat;
     /*-webkit-box-shadow:0px 0px 4px blue;*/
     display: block;
-    background-size: 25px;background-repeat: no-repeat;background-position: center;
+    margin:0 4px;
+    background-size: 20px;background-repeat: no-repeat;background-position: center;
 
 }
 select.execC-but {-webkit-appearance:button;width: auto!important;}
@@ -130,7 +133,7 @@ select.execC-but {-webkit-appearance:button;width: auto!important;}
 
 .execCommand-item select{
     width: 80px;
-    height: 40px;
+    height: 25px;
 }
 #setlink{
     display: none;
