--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -4,6 +4,10 @@
     top: 0px;
     z-index: 700;
     height: 100%;
+    border-right: 1px solid rgba(0,0,0,1);
+    background-color: rgba(0,0,0,0.1);
+    padding: 0  15px;
+    padding-top: 15px;
 
 }
 #tool-buttons{
@@ -11,20 +15,15 @@
     /*position: relative;*/
     /*float: left;*/
     /*width: 80px;*/
-    height: 100%;
+    /*height: 100%;*/
     /*padding-bottom: 10px;*/
-    background-color: rgba(0,0,0,0.1);
-    padding: 5px 15px;
-    padding-right: 35px;
+    
+    /*padding: 5px 15px;*/
+    /*padding-right: 35px;*/
     /*-webkit-box-shadow:3px 0px 8px #BBB;*/
     /*-webkit-border-top-right-radius:10px;*/
     /*-webkit-border-bottom-right-radius:10px;*/
     /*box-shadow:5px 0px 5px #BBB;*/
-    border-radius-topright:10px;
-    border-radius-bottomright:10px;
-    border: 1px solid rgba(0,0,0,1);
-    border-left: 0;
-    border-top: 0;
 }
 #tool-operation{
 
