--- a/css/shapebar.css
+++ b/css/shapebar.css
@@ -31,6 +31,8 @@
 .painting-board-confirm:hover{background-color: cornflowerblue;box-shadow: inset 0 0 5px 1px black;color: white;}
 .painting-board-eraser {background: url(../img/eraser.png);width: 30px;background-size: 30px;}
 .painting-board-eraser.on{box-shadow: inset 0 0 10px 2px cornflowerblue;}
+.painting-board-fullscreen{background: url(../img/fullscreen.png);width: 30px;background-size: 30px;}
+.painting-board-fullscreen.on{box-shadow: inset 0 0 10px 2px cornflowerblue;}
 .painting-board-toolbar {width: 100%;display: -webkit-box;margin-top: 10px;}
 .painting-board-panel {width: 100%;height: 100%;position: absolute;left: 0;top: 0;z-index: -1;}
 .pb-btn {cursor: pointer;border: 1px solid;border-radius: 5px;height: 30px;margin-right: 10px;text-align: center;line-height: 30px;}
@@ -40,4 +42,5 @@
 	position: absolute;top: 0px;right: 120px;
 	border: 1px solid;padding: 10px;border-radius: 10px;
 	background-color: rgba(255,255,255,0.9);
+	-webkit-transition: top 1s;
 }
