--- a/css/stylebar.css
+++ b/css/stylebar.css
@@ -75,8 +75,8 @@
 
 }
 .execC-but{
-    width: 25px;
-    height: 25px;
+    width: 15px;
+    height: 20px;
     /*border-radius: 8px;*/
     /*border: none;*/
     outline: none;
@@ -85,7 +85,7 @@
     /*-webkit-box-shadow:0px 0px 4px blue;*/
     display: block;
     margin:0 4px;
-    background-size: 20px;background-repeat: no-repeat;background-position: center;
+    background-size: 15px;background-repeat: no-repeat;background-position: center;
 
 }
 select.execC-but {-webkit-appearance:button;width: auto!important;}
@@ -132,8 +132,8 @@ select.execC-but {-webkit-appearance:button;width: auto!important;}
 .font-fullAlign .execC-but{background-image: url("../img/align_justify.png");}
 
 .execCommand-item select{
-    width: 80px;
-    height: 25px;
+    font-size: 10px;
+    height: 20px;
 }
 #setlink{
     display: none;
