Drag and Drop edit

--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -140,3 +140,4 @@
 #tool-addCode {background-image: url(../img/code.png);}
 #tool-help {background-image: url(../img/help.png);}
 #tool-play {background-image: url(../img/play.png);}
+#tool-mapEditing {background-image: url(../img/mapEditing.png);}
