--- a/css/main.css
+++ b/css/main.css
@@ -112,12 +112,28 @@ input{
 #preview-frame {border: 0;outline: 0;padding: 0;margin: 0;width: 100%;height: 100%;position: relative;display: block;border-radius: 10px;z-index: -1;}
 #previewContainer {width: -webkit-calc(100% - 30px);height: -webkit-calc(100% - 30px);
     left: 15px;position: absolute;top: 15px;background-color: white;z-index: 9999;}
+
+#mapEditingContainer {
+    width: 100%;height: 100%;
+    box-shadow: inset 0 0 20px 5px rgba(0,0,0,0.3);border: 0;
+    left: 0;position: absolute;top: 0;background-color: #D7D7D7;z-index: 9999;border-radius: 0;
+    overflow: hidden;background-image: url(../img/bg-pattern.png);
+}
+#mapEditingContainer .close-menu {top:0;right: 0;}
+#mapEditingContainer .impressContainer {width: 100%;height: 100%;left: 0;top: 0;-webkit-transform-origin: 0 0;overflow: visible;}
+#mapEditingContainer .step {box-shadow: 0 0 6px 0 black;}
+#mapEditingContainer .confirm-btn{
+    background: url(../img/confir_btn.png);height: 60px;width: 60px;position: absolute;
+    bottom: 10px;right: 10px;cursor: pointer;background-size:60px;border-radius: 10px;}
+#mapEditingContainer .confirm-btn:hover {box-shadow: 0 0 10px 2px rgba(0,0,0,0.2);}
 .dp-none {display: none!important;}
 /**清除浮动**/
 .cf:before, .cf:after {content:"";display:table;}
 .cf:after {clear:both;}
 .cf {zoom:1;}
-.video-play {background-image: url(../img/video_play.png);background-repeat: no-repeat;background-size: 30%;background-position: center;}
+.video-play {
+    background-image: url(../img/video_play.png);background-repeat: no-repeat;
+    background-size: 30%;background-position: center;-webkit-transform-origin: 0 0;}
 .w0 {width: 0px!important;}
 .transition-w {-webkit-transition:width 0.3s;}
 .transition-h {-webkit-transition:height 0.3s;}
