--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ input{
     overflow: hidden;background-image: url(../img/bg-pattern.png);
 }
 #mapEditingContainer .close-menu {top:0;right: 0;}
-#mapEditingContainer .impressContainer {width: 100%;height: 100%;left: 0;top: 0;-webkit-transform-origin: 0 0;overflow: visible;}
+#mapEditingContainer .impressContainer {width: 100%;height: 100%;left: 0;top: 0;-webkit-transform-origin: 36% 35%;overflow: visible;}
 #mapEditingContainer .step {box-shadow: 0 0 6px 0 black;}
 #mapEditingContainer .confirm-btn{
     background: url(../img/confir_btn.png);height: 60px;width: 60px;position: absolute;
