--- a/css/shapebar.css
+++ b/css/shapebar.css
@@ -11,10 +11,12 @@
 	background-repeat: no-repeat;background-size: 42px 42px;
 	margin-top:15px;
 	height: 50px;width: 50px;
-	border: 1px solid;background-position: center;background-color: white;
+	border: 1px solid;background-position: center;background-color: rgba(255,255,255,0.5);
 	border-radius: 10px;
 }
-.shape-icon:hover {box-shadow: 0 0 10px 2px #CCC;cursor: pointer;}
+.shape-icon:hover{
+    box-shadow:0px 0px 10px black;cursor: pointer;
+}
 #triangle {background-image: url(../img/triangle.png);}
 #circular {background-image: url(../img/circle.png);}
 #rectangle {background-image: url(../img/square.png);}
