--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,7 @@ input{
 
 }
 #fileView .fs-icon-back {top: 45px;}
-#preview-frame {border: 0;outline: 0;padding: 0;margin: 0;width: 100%;height: 100%;position: relative;display: block;border-radius: 10px;z-index: -1;}
+#preview-frame {border: 0;outline: 0;padding: 0;margin: 0;width: 100%;height: 100%;position: relative;display: block;z-index: -1;}
 #previewContainer {width: -webkit-calc(100% - 30px);height: -webkit-calc(100% - 30px);
     left: 15px;position: absolute;top: 15px;background-color: white;z-index: 9999;}
 
