--- a/css/base.css
+++ b/css/base.css
@@ -1,1 +1,14 @@
- .mg-tb10 {margin: 10px 0;}
+::-webkit-scrollbar {
+	width: 16px;
+	height: 16px;
+	background-image: -webkit-gradient(linear,0 0,100% 0,from(#F2F2F2),color-stop(0.5,#FAFAFA),to(#FAFAFA));
+	border-left: 1px solid #E4E4E4;
+}
+::-webkit-scrollbar-thumb {
+	min-height: 30px;
+	min-width: 30px;
+	-webkit-border-image: url("../images/thum.png") 4 0 4 0 stretch stretch;
+	border-width: 4px;
+}
+::-webkit-scrollbar-thumb:hover {-webkit-border-image: url("../images/thum-hover.png") 4 0 4 0 stretch stretch;}
+.mg-tb10 {margin: 10px 0;}
