--- a/css/canvas.css
+++ b/css/canvas.css
@@ -68,6 +68,11 @@
 }*/
 .element-container .textboxelement {
     word-break: break-all;
+    text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
+    font-family: 'Open Sans', Arial, sans-serif;
+    font-size: 30px;
+    line-height: 36px;
+    letter-spacing: -1px;
 }
 .element-container .textboxelement:hover {
     box-shadow: 0px 0px 0px 6px rgba(0,0,0,0.1);
